# audio-fingerprint-identifying-python

./: .gitignore  README.md  collect-fingerprints-of-songs.py  pyproject.toml  recognize-from-file.py  recognize-from-microphone.py
libs/: __init__.py  config.py  db.py  db_mongo.py  db_sqlite.py  fingerprint.py  reader.py  reader_file.py  reader_microphone.py  visualiser_console.py
